RESOLVED FIXED90032
Fix new Wunused-private-field violations that crept in
https://bugs.webkit.org/show_bug.cgi?id=90032
Summary Fix new Wunused-private-field violations that crept in
Nico Weber
Reported 2012-06-26 18:06:07 PDT
Fix new Wunused-private-field violations that crept in
Attachments
Patch (1.16 KB, patch)
2012-06-26 18:07 PDT, Nico Weber
no flags
Nico Weber
Comment 1 2012-06-26 18:07:10 PDT
WebKit Review Bot
Comment 2 2012-06-26 19:20:39 PDT
Comment on attachment 149652 [details] Patch Clearing flags on attachment: 149652 Committed r121313: <http://trac.webkit.org/changeset/121313>
WebKit Review Bot
Comment 3 2012-06-26 19:20:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.