Fix new Wunused-private-field violations that crept in https://bugs.webkit.org/show_bug.cgi?id=90032

Reviewed by Adam Barth.

* page/Performance.h:
(Performance):


Canonical link: https://commits.webkit.org/107882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121313 268f45cc-cd09-0410-ab3c-d52691b4dbfc